Reintroduced statistics in lazy abstraction